# discovery_config_validator

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
dcv_client/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json  webpack.config.js
dcv_client/src/: index.ejs
dcv_client/src/ts/: App.tsx  Schema.tsx  Validator.tsx  index.tsx
dcv_server/: config.py  main.py  types.py  utils.py
