[project]
name = "dcv-server"
version = "0.1.0"
description = "Web service for validating Bento discovery configuration files (server component)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bento-lib~=14.1",
    "fastapi~=0.128",
    "orjson~=3.11",
    "python-multipart~=0.0",
    "structlog~=25.5.0",
    "uvicorn~=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 120
